Version 2.46:  ( Sat Jan 17 16:31:52 IST 2009 )
-----------------------------------------------

* Added regression tests for bug #1720915
- https://sourceforge.net/tracker/index.php?func=detail&aid=1720915&group_id=6926&atid=106926
- the bug seems to be fixed in trunk.

* Added a regression test for RT #36584
- https://rt.cpan.org/Ticket/Display.html?id=36584
- the bug seems to be fixed in trunk.

* Added a regression test for RT #36309
- https://rt.cpan.org/Ticket/Display.html?id=36309
- Testing for allowedcommentchars.
- the bug seems to be fixed in trunk.

* Converted t/03comments.t to Test::More and did other cleanups in preparation 
of solving a few bugs.

* Now GetSectionComment does the documented behaviour in scalar context and
returns the string joined by newlines:
- https://rt.cpan.org/Ticket/Display.html?id=8612

* Now GetParameterComment returns the right thing in scalar context (joined
by newlines). It was documented and tested.
- https://rt.cpan.org/Ticket/Display.html?id=8612

Version 2.45:  ( Sat Dec 27 17:21:45 IST 2008 )
-----------------------------------------------

* Fixed bug #1230339:
- https://sourceforge.net/tracker/index.php?func=detail&aid=1230339&group_id=6926&atid=106926
- Can't store and retrive "\nEOT\n"
- Fixed by checking for the existence of the here-doc terminator in the 
string, and if so appending more characters.

* Fixed bug #1565180
- https://sourceforge.net/tracker/index.php?func=detail&aid=1565180&group_id=6926&atid=106926
- -nocase breaks -default.
- If a default-values section is specified, then -nocase did not look it up
if it's not lowercase.

* Fixed bug #1831654
- https://sourceforge.net/tracker/index.php?func=detail&aid=1831654&group_id=6926&atid=106926
- multiline-values are tainted.
- Added a test as t/17untainted-multiline-values.t

Version 2.44:  ( Thu Dec 25 11:44:07 IST 2008 )
-----------------------------------------------

* Eliminated an assignment of $VERSION into itself to "get rid of warnings".