@@ -28,6 +28,7 @@ t/17untainted-multiline-values.t
 t/18non-contiguous-groups.t
 t/19param-found-outside-section.t
 t/20allowedcommentchars.t
+t/21multiline-values-in-tied.t
 t/allowed-comment-chars.ini
 t/array.ini
 t/bad.ini
